Made webpack copy files that were needed dynamically by search results, added support for custom images, fixed tab alignment

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/search-panel/search/search.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/search-panel/search/search.component.css
@@ -55,7 +55,6 @@ input:-webkit-autofill {
   position: absolute;
     top: 81px;
     left: 5px;
-    z-index: 4;
     display: block;
     max-width: 550px;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
@@ -112,7 +111,6 @@ input:-webkit-autofill {
 .autocomplete-list {
   border-bottom: none;
   border-top: none;
-  z-index: 3;
   top: 100%;
   margin: 1rem 0;
   padding: 0;
@@ -209,7 +207,6 @@ input:-webkit-autofill {
   text-align: center;
   padding: 11px 20px;
   position: relative;
-  z-index: 2;
   cursor: pointer;
   display: inline-block;
   -webkit-transition: color 250ms ease-in-out;
